<?xml version="1.0"?>
<package>
  <name>triangulation</name>
  <version>0.0.1</version>
  <description>The triangulation package</description>
  <maintainer email="catherine.glossop@autodrive.utoronto.ca">catherine</maintainer>
  <author>Catherine Glossop</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>zeus_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>kalman</build_depend>
  <build_depend>map</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>zeus_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>kalman</run_depend>
  <run_depend>map</run_depend>
  <export>
  </export>
</package>
